@startuml mapper_flow
left to right direction
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FEFECE
skinparam classBorderColor #A80036
skinparam interfaceBackgroundColor #FEFECE
skinparam interfaceBorderColor #A80036

package "Ports" {
  interface SourceMapper
}

package "Domain Models" {
  class CsvRow {
    file_line_no : int
    data_line_no : int
    values : list[str | None]
  }
  class RowRef {
    line_no : int
    row_id : str
    identity_primary : str | None
    identity_value : str | None
  }
  class ValidationErrorItem {
    code : str
    field : str | None
    message : str
  }
  class SourceRecord {
    line_no : int
    record_id : str
    values : Mapping[str, Any]
  }
}

package "Domain Transform" {
  class MatchKey {
    value : str
  }
  class MapResult {
    row_ref : RowRef
    row
    match_key : MatchKey | None
    secret_candidates : dict[str, str]
    errors : list[ValidationErrorItem]
    warnings : list[ValidationErrorItem]
  }
}

package "Employees Dataset" {
  class EmployeesRowPublic {
    email : str | None
    last_name : str | None
    first_name : str | None
    middle_name : str | None
    is_logon_disable : bool | None
    user_name : str | None
    phone : str | None
    personnel_number : str | None
    manager_id : int | None
    organization_id : int | None
    position : str | None
    avatar_id : str | None
    usr_org_tab_num : str | None
  }
  class EmployeesSourceMapper {
    map(raw: SourceRecord) -> MapResult
  }
  class FieldRule {
    name : str
    index : int
    required : bool
  }
}

SourceMapper <|.. EmployeesSourceMapper
CsvRow --> EmployeesCsvRecordAdapter : input
EmployeesCsvRecordAdapter --> SourceRecord : record
SourceRecord --> EmployeesSourceMapper : input
EmployeesSourceMapper --> MapResult : output
MapResult --> EmployeesRowPublic : row
MapResult --> MatchKey : match_key
MapResult --> RowRef : row_ref
MapResult --> ValidationErrorItem : errors/warnings
EmployeesCsvRecordAdapter --> FieldRule : uses FIELD_RULES

package "Infra Sources" {
  class CollectResult {
    record : SourceRecord
    errors : list[ValidationErrorItem]
    warnings : list[ValidationErrorItem]
  }
  class EmployeesCsvRecordAdapter {
    collect(csv_row: CsvRow) -> CollectResult
  }
}

EmployeesCsvRecordAdapter --> CollectResult : output
CollectResult --> SourceRecord : record
CollectResult --> ValidationErrorItem : errors/warnings
@enduml
